# rem-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Modelfile  Modelfile.trained  README.md  docker-compose.yml  install.sh
rem-cli/: .dockerignore  .remcli.toml.example  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  deny.toml  install.sh
rem-cli/.github/workflows/: ci.yml
rem-cli/.rem/: codebase_index.json  codebase_index.msgpack
rem-cli/benches/: indexer.rs
rem-cli/docs/: observe_demo_fireworks.txt  observe_demo_slowest.txt  observe_demo_transcript.md
rem-cli/my-app-EMBER/: index.html
rem-cli/my-app-GHOST/: index.html  script.js
rem-cli/my-app-MIST/: index.html  style.css
rem-cli/my-app-PAPER/: index.html
rem-cli/my-app-PHOSPHOR/: index.html
rem-cli/my-app-SAKURA/: index.html
rem-cli/my-app2/: index.html
rem-cli/proptest-regressions/: text_util.txt
rem-cli/src/: agentic.rs  blocklist.rs  chat.rs  cli.rs  commands.rs  completion.rs  config.rs  constants.rs  feedback.rs  find.rs  highlight.rs  indexer.rs  intent.rs  main.rs  memory.rs  pager.rs  parsing.rs  plugin.rs  provider.rs  reasoning.rs  repl.rs  search.rs  session_io.rs  templates.rs  text_util.rs  token_count.rs  tool_executor.rs  types.rs  vision.rs  watcher.rs
rem-cli/src/commands/: compare.rs  files.rs  git.rs  goal.rs  help.rs  mod.rs  plugin.rs  prompt.rs  registry.rs  repl.rs  review.rs  runner.rs  session.rs  session_compact.rs  session_config.rs  (+4 more)
rem-cli/tests/: cli_integration.rs  find.rs  intent_parsing.rs
rem-cli/themes/: example.toml
(+97 files in other folders)
