[package]
name = "rem-cli"
version = "0.4.0"
edition = "2021"
description = "Rust CLI assistant for beginner coding with rem models"
license = "MIT"

[[bin]]
name = "rem"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
flate2 = "1.0"
futures-util = "0.3"
regex = "1.11"
scraper = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util", "process"] }
toml = "0.8"
walkdir = "2.5"
rayon = "1.10"
ignore = "0.4"
memchr = "2.8"
similar = "2.5"
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
base64 = "0.22"
thiserror = "1"
tiktoken-rs = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = { version = "7", features = ["macos_kqueue"] }
fs2 = "0.4"
rand = "0.8"
rmp-serde = "1.3"
memmap2 = "0.9"

[features]
default = ["bedrock"]
bedrock = ["aws-sdk-bedrockruntime", "aws-config"]

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "indexer"
harness = false
